# nanda-beacon

./: .env.example  .gitignore  LICENSE  README.md  SKILL.MD  demo.py  pyproject.toml  railway.json  requirements.txt
beacon/: __init__.py  agent_card.py  config.py  enrichment.py  intent.py  main.py  models.py  nanda_client.py
beacon/chain/: __init__.py  base_sepolia.py  interface.py  mock.py
tests/: conftest.py  test_enrich.py  test_review.py
