[project]
name = "nanda-beacon"
version = "1.0.0"
description = "A NANDA City-of-Agents citizen that returns on-chain ERC-8004 trust evidence. A witness, not a judge."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "James Carnley" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "web3>=7.0,<8",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
llm = ["openai>=1.30"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["beacon*"]
